[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gocheck"
version = "0.1.3"
description = "A Python library for barrel distortion correction in wide-angle images"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "jujuspace"},
]
keywords = ["image processing", "distortion correction", "barrel distortion", "opencv", "computer vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
requires-python = ">=3.7"
dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/jujuspace/gocheck"
Repository = "https://github.com/jujuspace/gocheck"
Issues = "https://github.com/jujuspace/gocheck/issues"